<resources>
    <string name="app_name">Raypa</string>
    <string name="cancel">Cancel</string>
    <string name="do_you_really_want_to_logout">Do you really want to log out?</string>
    <string name="login">LOGIN</string>
    <string name="new_program">New Program</string>
    <string name="not_running">not running</string>
    <string name="running">"running "</string>
    <string name="step_by_step_guide">STEP BY STEP GUIDE</string>
    <string name="settings_storage">Storage</string>
    <string name="settings_date_and_time">Date and Time</string>
    <string name="settings_factory_reset">Factory Reset</string>
    <string name="settings_restore_device_to_its_original_manufacturer_setting">Restore device to its original manufacturer setting</string>
    <string name="settings_device_key_security_key">Device Key | Security Key</string>
    <string name="settings_software_version">Software Version</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="export_protocols_to_usb_stick">Export Protocols to USB-Stick</string>
    <string name="manage_wifi_connections">Manage WLAN connections</string>
    <string name="manage_lan_connections">Manage LAN connections</string>
    <string name="wifi_on_off">WLAN ON/OFF</string>
    <string name="online_mode">Online mode</string>
    <string name="synchronize_data_with_www_certocloud_com">Synchronize data with www.RaypaCloud.com</string>
    <string name="install_update_from_usb_flash_drive">Install update from USB flash drive</string>
    <string name="export_protocols_to_micro_sd_card">Export protocols to Micro SD Card</string>
    <string name="save">SAVE</string>
    <string name="edit_user_defined_program">Edit user defined program</string>
    <string name="preheat_chamber_on_off">Preheat chamber ON/OFF</string>
    <string name="keep_temperature_on_off">Keep temperature ON/OFF</string>
    <string name="if_on_the_sterilizer_will_warm_up_the_chamber_and_steam_generator_permanently">Warm up the chamber and steam generator permanently</string>
    <string name="if_on_the_sterilizer_will_heat_up_to_50_c_before_program_execution">Heat up the chamber to 50°C before program execution</string>
    <string name="material_testing_mode">Material testing mode</string>
    <string name="if_enabled_the_user_can_enter_how_often_to_run_a_program_without_user_interaction">On program start, show a dialog to enter how often to run the program automatically</string>
    <string name="open_label_printer_designer">Open label printer designer</string>
    <string name="change_admin_password">Change Admin Password</string>
    <string name="admin_password">Admin Password</string>
    <string name="choose_server">CHOOSE SERVER</string>
    <string name="server_host">Host</string>
    <string name="server_port">Port</string>
    <string name="server_info">Server Info</string>
    <string name="preferences_glp_header">preferences_glp_header</string>
    <string name="preferences_glp_autoclave_name">preferences_glp_autoclave_name</string>
    <string name="preferences_glp_project_name">preferences_glp_project_name</string>
    <string name="glp_header">GLP Header</string>
    <string name="header">Header</string>
    <string name="print_header">Print Header</string>
    <string name="print_header_on_off">Print the header on/off</string>
    <string name="autoclave_name">Autoclave Name</string>
    <string name="preferences_print_header">preferences_statistic_mode</string>
    <string name="preferences_print_autoclave_name">preferences_print_balance_name</string>
    <string name="preferences_print_project_name">preferences_print_project_name</string>
    <string name="preferences_print_program_name">preferences_print_program_name</string>
    <string name="preferences_print_program_result">preferences_print_program_result</string>
    <string name="preferences_print_program_desc">preferences_print_program_desc</string>
    <string name="preferences_print_signature">preferences_print_signature</string>
    <string name="preferences_print_date">preferences_print_date</string>
    <string name="preferences_print_autoclave_serial_number">preferences_print_serial_number</string>
    <string name="preferences_print_user_name">preferences_print_user_name</string>
    <string name="print_date">Print Date</string>
    <string name="print_data_on_off">Print date on/off</string>
    <string name="print_autoclave_serial_number_on_off">Print Autoclave Serial Number on/off</string>
    <string name="print_autoclave_serial_number">Print Autoclave Serial Number</string>
    <string name="print_autoclave_name">Print Autoclave Name</string>
    <string name="print_user_name">Print User Name</string>
    <string name="print_project_name">Print Project Name</string>
    <string name="print_program_name">Print Program Name</string>
    <string name="print_signature_line">Print Signature Line</string>
    <string name="print_signature_line_on_off">Print the signature line on/off</string>
    <string name="print_the_program_name_on_off">Print the program name on/off</string>
    <string name="print_the_program_result_on_off">Print the program result on/off</string>
    <string name="print_the_program_data_points_on_off">Print the program data points on/off</string>
    <string name="print_the_program_desc_on_off">Print the program description on/off</string>
    <string name="print_the_project_name_on_off">Print the project name on/off</string>
    <string name="set_the_autoclave_identification">Set the autoclave identification</string>
    <string name="print_the_user_name_on_off">Print the user name on/off</string>
    <string name="print_the_autoclave_name_on_off">Print the autoclave name on/off</string>
    <string name="project_name">Project Name</string>
    <string name="set_the_project_name">Set the project name</string>
    <string name="print_program_desc">Program load/details</string>
    <string name="print_program_result">Program Result</string>
    <string name="print_program_data_points">Program Data Points</string>
    <string name="preferences_lockout_user_account">preferences_lockout_user_account</string>
    <string name="preferences_lockout_network">preferences_lockout_network</string>
    <string name="preferences_lockout_audit_logs">preferences_audit_logs</string>
    <string name="preferences_lockout_create_user">preferences_create_user</string>
    <string name="preferences_lockout_add_program">preferences_add_program</string>
    <string name="preferences_lockout_device">preferences_lockout_device</string>
    <string name="preferences_lockout_language">preferences_lockout_language</string>
    <string name="preferences_lockout_notifications">preferences_lockout_notifications</string>
    <string name="preferences_lockout_sterilization">preferences_lockout_sterilization</string>
    <string name="preferences_lockout_autoclave">preferences_lockout_autoclave</string>
    <string name="preferences_lockout_calibration">preferences_lockout_calibration</string>
    <string name="preferences_lockout_glp">preferences_lockout_glp</string>
    <string name="summary_lockout_user_account">Lock the user account settings</string>
    <string name="title_lockout_user_account">User Account</string>
    <string name="summary_lockout_network">Lock the network settings</string>
    <string name="title_lockout_network">Network Settings</string>
    <string name="summary_lockout_audit_logs">Lock the audit logs settings</string>
    <string name="title_lockout_audit_logs">Audit Logs Settings</string>
    <string name="summary_lockout_create_user">Lock the create user button</string>
    <string name="title_lockout_create_user">Create User</string>
    <string name="summary_lockout_add_program">Lock Add/Edit/Program settings</string>
    <string name="title_lockout_add_program">Add/Edit/Remove programs</string>
    <string name="summary_lockout_device">Lock the device settings</string>
    <string name="title_lockout_device">Device Settings</string>
    <string name="summary_lockout_language">Lock the language settings</string>
    <string name="title_lockout_language">Language Settings</string>
    <string name="summary_lockout_notifications">Lock the notification settings</string>
    <string name="title_lockout_notifications">Notification Settings</string>
    <string name="summary_lockout_sterilization">Lock the sterilization settings</string>
    <string name="title_lockout_sterilization">Sterilization Settings</string>
    <string name="summary_lockout_autoclave">Lock the autoclave settings</string>
    <string name="title_lockout_autoclave">Autoclave Settings</string>
    <string name="summary_lockout_calibration">Lock the calibration settings</string>
    <string name="title_lockout_calibration">Calibration Settings</string>
    <string name="summary_lockout_glp">Lock the GLP settings</string>
    <string name="title_lockout_glp">GLP Settings</string>
    <string name="preferences_autoclave_model">Model</string>
    <string name="pref_device_settings">Device</string>
    <string name="preferences_autoclave_serial">Serial Number</string>
    <string name="preferences_autoclave_pcb_serial">PCB Serial Number</string>
    <string name="pref_calibration_category">Calibrations</string>
    <string name="preferences_autoclave_degrees">Degrees</string>
    <string name="pref_model_summary">Current model: %s</string>
    <string name="preferences_autoclave_final_temperature">Final Temperature</string>
    <string name="preferences_autoclave_std_program">Std programs.</string>
    <string name="preferences_autoclave_std_program_summary">Std assigns programs to model and delete the rest.</string>
    <string name="preferences_autoclave_offset_probe_1">Offset Probe 1</string>
    <string name="preferences_autoclave_offset_probe_2">Offset Probe 2</string>
    <string name="preferences_autoclave_offset_pressure_probe_1">Offset Pressure Probe 1</string>
    <string name="preferences_autoclave_offset_pressure_probe_2">Offset Pressure Probe 2</string>
    <string name="preferences_autoclave_setpoint_temperature">Setpoint temperature F</string>
    <string name="preferences_autoclave_setpoint_hours_review">Setpoint Hours Review</string>
    <string name="preferences_autoclave_setpoint_filter_cycle">Setpoint Filter Cycle</string>
    <string name="preferences_autoclave_cooling_pressure">Cooling Pressure</string>
    <string name="preferences_autoclave_warm_up_temp">Warm-up Temperature</string>
    <string name="preferences_autoclave_number_cycle">Total Cycles</string>
    <string name="preferences_autoclave_number_hours">Number of Minutes</string>
    <string name="preferences_autoclave_number_review_hours">Number of review hours</string>
    <string name="preferences_autoclave_number_filter_cycle">Number of filter cycles</string>
    <string name="pref_network_category">Network</string>
    <string name="preferences_autoclave_ip">IP</string>
    <string name="preferences_autoclave_mask">Mask</string>
    <string name="preferences_autoclave_runway">Runway</string>
    <string name="preferences_autoclave_port">Port</string>
    <string name="pref_f_function_category">F Function</string>
    <string name="preferences_autoclave_updatable">Enable Updating</string>
    <string name="preferences_autoclave_updatable_summary">Enable flashing a firmware to Microcontroller from USB</string>
    <string name="preferences_autoclave_reset_review_hours">Reset review hours</string>
    <string name="preferences_autoclave_reset_review_hours_summary">Resets the hourmeter to cancel the ad review.</string>
    <string name="preferences_autoclave_reset_filter_cycle">Reset filter cycle</string>
    <string name="preferences_autoclave_reset_filter_cycle_summary">Resets the cycle counter to cancel the warning</string>
    <string name="enable_fda">FDA Enabled</string>
    <string name="enable_audit_comment">Enable Audit Comment</string>
</resources>