<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_key_device_category"
        android:title="@string/pref_device_settings">

        <ListPreference
            android:defaultValue="TLV-150-FA"
            android:entries="@array/autoclave_models"
            android:entryValues="@array/autoclave_models"
            android:key="preferences_autoclave_parameter_1"
            android:summary="%s"
            android:title="@string/preferences_autoclave_model" />

        <Preference
            android:key="preferences_autoclave_parameter_std_assign"
            android:summary="@string/preferences_autoclave_std_program_summary"
            android:title="@string/preferences_autoclave_std_program" />

        <EditTextPreference
            android:key="preferences_autoclave_parameter_3"
            android:inputType="number"
            android:summary="@string/pref_model_summary"
            android:title="@string/preferences_autoclave_serial" />

        <EditTextPreference
            android:key="preferences_autoclave_parameter_4"
            android:enabled="false"
            android:title="@string/preferences_autoclave_pcb_serial" />

        <EditTextPreference
            android:inputType="number"
            android:key="preferences_autoclave_parameter_71"
            android:title="@string/preferences_autoclave_setpoint_hours_review" />

        <EditTextPreference
            android:inputType="number"
            android:key="preferences_autoclave_parameter_72"
            android:title="@string/preferences_autoclave_setpoint_filter_cycle" />

        <EditTextPreference
            android:inputType="number"
            android:enabled="false"
            android:key="preferences_autoclave_parameter_94"
            android:title="@string/preferences_autoclave_number_cycle" />

        <EditTextPreference
            android:inputType="number"
            android:enabled="false"
            android:key="preferences_autoclave_parameter_95"
            android:title="@string/preferences_autoclave_number_hours" />


<!--        <CheckBoxPreference
            android:key="preferences_autoclave_parameter_9"
            android:title="@string/preferences_autoclave_is_user_mode" />-->

        <Preference
            android:key="preferences_autoclave_parameter_update"
            android:summary="@string/preferences_autoclave_updatable_summary"
            android:title="@string/preferences_autoclave_updatable" />

        <EditTextPreference
            android:inputType="number"
            android:key="preferences_autoclave_parameter_96"
            android:enabled="false"
            android:title="@string/preferences_autoclave_number_review_hours" />

        <Preference
            android:key="preferences_autoclave_parameter_reset_review_hours"
            android:summary="@string/preferences_autoclave_reset_review_hours_summary"
            android:title="@string/preferences_autoclave_reset_review_hours" />

        <EditTextPreference
            android:inputType="number"
            android:key="preferences_autoclave_parameter_98"
            android:enabled="false"
            android:title="@string/preferences_autoclave_number_filter_cycle" />

        <Preference
            android:key="preferences_autoclave_parameter_reset_filter_cycle"
            android:summary="@string/preferences_autoclave_reset_filter_cycle_summary"
            android:title="@string/preferences_autoclave_reset_filter_cycle" />


    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_calibration_category"
        android:title="@string/pref_calibration_category">

        <ListPreference
            android:entries="@array/preferences_autoclave_degrees_key"
            android:entryValues="@array/preferences_autoclave_degrees_values"
            android:key="preferences_autoclave_parameter_8"
            android:title="@string/preferences_autoclave_degrees" />


        <EditTextPreference
            android:inputType="numberDecimal"
            android:key="preferences_autoclave_parameter_27"
            android:title="@string/preferences_autoclave_final_temperature" />

        <EditTextPreference
            android:inputType="numberDecimal|numberSigned"
            android:key="preferences_autoclave_parameter_36"
            android:title="@string/preferences_autoclave_offset_probe_1" />

        <EditTextPreference
            android:inputType="numberDecimal|numberSigned"
            android:key="preferences_autoclave_parameter_37"
            android:title="@string/preferences_autoclave_offset_probe_2" />

        <EditTextPreference
            android:inputType="numberDecimal"
            android:key="preferences_autoclave_parameter_42"
            android:title="@string/preferences_autoclave_cooling_pressure" />

        <EditTextPreference
            android:inputType="numberDecimal|numberSigned"
            android:key="preferences_autoclave_parameter_45"
            android:title="@string/preferences_autoclave_offset_pressure_probe_1" />

        <EditTextPreference
            android:inputType="numberDecimal|numberSigned"
            android:key="preferences_autoclave_parameter_46"
            android:title="@string/preferences_autoclave_offset_pressure_probe_2" />

        <EditTextPreference
            android:inputType="numberDecimal"
            android:key="preferences_autoclave_parameter_99"
            android:title="@string/preferences_autoclave_warm_up_temp" />

    </PreferenceCategory>


    <PreferenceCategory
        android:key="pref_key_f_function_category"
        android:title="@string/pref_f_function_category">
        <EditTextPreference
            android:inputType="numberDecimal"
            android:key="preferences_autoclave_parameter_40"
            android:title="@string/preferences_autoclave_setpoint_temperature" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_network_category"
        android:title="@string/pref_network_category">

        <EditTextPreference
            android:digits="0123456789."
            android:inputType="number|numberDecimal"
            android:key="preferences_autoclave_parameter_89"
            android:title="@string/preferences_autoclave_ip" />

        <EditTextPreference
            android:digits="0123456789."
            android:inputType="number|numberDecimal"
            android:key="preferences_autoclave_parameter_90"
            android:title="@string/preferences_autoclave_mask" />

        <EditTextPreference
            android:digits="0123456789."
            android:inputType="number|numberDecimal"
            android:key="preferences_autoclave_parameter_91"
            android:title="@string/preferences_autoclave_runway" />

        <EditTextPreference
            android:digits="0123456789"
            android:inputType="number|numberDecimal"
            android:key="preferences_autoclave_parameter_92"
            android:title="@string/preferences_autoclave_port" />


    </PreferenceCategory>


</PreferenceScreen>